Corrected relative orientation bug in state definition

--- a/examples/tests/initialConditionPatchyProtein.ipynb
+++ b/examples/tests/initialConditionPatchyProtein.ipynb
@@ -28,17 +28,19 @@
     "bodytype = 'rigidbody'\n",
     "particleTypes = [0, 1]\n",
     "numBoundStates = 6\n",
-    "initialState = 1\n",
+    "initialState = 2\n",
     "\n",
     "# Parameters related to patchy Particle potential with angular dependence\n",
     "# Define Patchy Protein potential parameters (This values are fixed and should match\n",
     "# those used to determine metastable states in potential and trajectory.)\n",
     "sigma = 1.0\n",
-    "strength = 65\n",
+    "strength = 60\n",
+    "angularStrength = 10\n",
     "patchesCoordinates1 = [np.array([1.,0.,0.]), np.array([0.,1.,0.]), np.array([0.,0.,1.]),\n",
     "                       np.array([-1.,0.,0.]), np.array([0.,-1.,0.]), np.array([0.,0.,-1.])]\n",
     "patchesCoordinates2 = [np.array([1.,0.,0.])]\n",
-    "potentialPatchyProtein = patchyProteinMarkovSwitch(sigma, strength, patchesCoordinates1, patchesCoordinates2)\n",
+    "potentialPatchyProtein = patchyProteinMarkovSwitch(sigma, strength, angularStrength, \n",
+    "                                                   patchesCoordinates1, patchesCoordinates2)\n",
     "\n",
     "# Create unbound MSMlist (CTMSMs)\n",
     "# MSM for particle type0\n",
@@ -173,6 +175,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Check state calculated by trajectory matches with initial state chosen\n",
+    "part1, part2 = partlist[0], partlist[1]\n",
+    "dummyTraj = msmrd2.trajectories.patchyProtein(2,1)\n",
+    "boundState = dummyTraj.getState(partlist[0], partlist[1])\n",
+    "if (boundState != initialState):\n",
+    "    print(\"Warning, getState function (sampleDiscreteState) is not returning the correct state.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Print particlelist into file and generates plotting tcl file for VMD\n",
     "datafile  = open('../../data/vmd/testInitialCondition2.xyz', 'w')\n",
     "# Other plotting parameters\n",
@@ -188,7 +204,7 @@
     "stride = 100 #10 #1000\n",
     "for i in range(timesteps):\n",
     "    if i%stride == 0:\n",
-    "        datafile.write(str(numSpheres2Draw) + '\\n')\n",
+    "        datafile.write(str(numSpheres2Draw) + '\\n')quatRotations\n",
     "        datafile.write(str(0) + '\\n')\n",
     "    for j, part in enumerate(partlist):\n",
     "        if i%stride == 0:\n",
@@ -251,9 +267,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:msmrd-dev]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-msmrd-dev-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -265,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
