--- a/examples/benchmark/plotPatchyProteinFPTs.ipynb
+++ b/examples/benchmark/plotPatchyProteinFPTs.ipynb
@@ -141,7 +141,7 @@
     "# Configure figure\n",
     "fig, ax1 = plt.subplots(nrows=1, figsize=(6,5))\n",
     "fig.subplots_adjust(hspace=0)\n",
-    "fsize = 16\n",
+    "fsize = 22\n",
     "plt.rcParams['xtick.labelsize']=fsize\n",
     "plt.rcParams['ytick.labelsize']=fsize\n",
     "# Set outer common axes titles\n",
@@ -163,15 +163,15 @@
     "ax1.hist(MSMRDfpts, bins = hbins, alpha=a2, edgecolor=c2, lw=2, histtype='step', \n",
     "         weights = weightsMSMRD, label =r'$\\mathrm{MSM/RD}$');\n",
     "ax1.legend(fontsize=fsize, title=r'$\\mathrm{Unbound} \\rightarrow \\mathrm{Bound}$', title_fontsize = fsize, fancybox=True)\n",
-    "ax1.text(100, 0.15, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(mfpt, fptstd), fontsize=fsize, color=c1)\n",
-    "ax1.text(120, 0.13, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(MSMRDmfpt, MSMRDfptstd), fontsize=fsize, color=c2)\n",
+    "ax1.text(80, 0.130, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(mfpt, fptstd), fontsize=fsize, color=c1)\n",
+    "ax1.text(100, 0.105, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(MSMRDmfpt, MSMRDfptstd), fontsize=fsize, color=c2)\n",
     "ax1.set_yticks(np.arange(0, 0.18, step=0.1));\n",
     "ax1.set_xlim([0,500])\n",
     "#ax1.set_xlim([0,2000])\n",
     "#ax1.set_xlim([0,10])\n",
     "#ax1.set_ylim([0,0.18])\n",
     "\n",
-    "plt.savefig('toBound_patchyProtein_FPTs.pdf', bbox_inches='tight')"
+    "#plt.savefig('toBound_patchyProtein_FPTs.pdf', bbox_inches='tight')"
    ]
   },
   {
@@ -264,7 +264,7 @@
     "# Configure figure\n",
     "fig, ax1 = plt.subplots(nrows=1, figsize=(6,5))\n",
     "fig.subplots_adjust(hspace=0)\n",
-    "fsize = 16\n",
+    "fsize = 22\n",
     "plt.rcParams['xtick.labelsize']=fsize\n",
     "plt.rcParams['ytick.labelsize']=fsize\n",
     "#hbins = np.arange(0, 15, 0.5)\n",
@@ -286,8 +286,8 @@
     "ax1.hist(MSMRDfpts2unbound, bins = hbins, alpha=a2, edgecolor=c2, lw=2, histtype='step',\n",
     "         facecolor='None', weights = weightsMSMRD2, label =r'$\\mathrm{MSM/RD}$');\n",
     "ax1.legend(fontsize=fsize, title=r'$ \\mathrm{Bound} \\rightarrow \\mathrm{Unbound}$', title_fontsize = fsize, fancybox=True)\n",
-    "ax1.text(3.2, 0.105, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(mfpt2unbound, fpt2unboundstd), fontsize=fsize, color=c1)\n",
-    "ax1.text(3.4, 0.09, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(MSMRDmfpt2unbound, MSMRDfpt2unboundstd), \n",
+    "ax1.text(3.0, 0.09, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(mfpt2unbound, fpt2unboundstd), fontsize=fsize, color=c1)\n",
+    "ax1.text(3.2, 0.075, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(MSMRDmfpt2unbound, MSMRDfpt2unboundstd), \n",
     "         fontsize=fsize, color=c2)\n",
     "#ax1.set_xlim([0,15])\n",
     "#ax1.set_ylim([0,0.2])\n",
@@ -296,14 +296,7 @@
     "ax1.set_yticks(np.arange(0, 0.2, step=0.1));\n",
     "\n",
     "\n",
-    "plt.savefig('toUnbound_patchyProtein_FPTs.pdf', bbox_inches='tight')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## UP UNTIL HERE MODIFICATIONS FOR PATCHY PROTEINS"
+    "#plt.savefig('toUnbound_patchyProtein_FPTs.pdf', bbox_inches='tight')"
    ]
   },
   {
@@ -355,7 +348,7 @@
     "    for j in boundStates:\n",
     "        if i != j:\n",
     "            filenameB2B = rootDirectory + 'MSMRDpatchyProteinFPTs_' + str(i) + 'to' + str(j) \\\n",
-    "            + '_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
+    "            + '_trajs' + str(numTrajs) + '_lagt' + str(lagtime) + '_boxsize' + str(boxsize) + '.xyz'\n",
     "            with open(filenameB2B) as file:\n",
     "                k=0\n",
     "                for line in file:\n",
@@ -394,7 +387,7 @@
     "    for j in boundStates:\n",
     "        if i != j:\n",
     "            mfptsB2B[i-1,j-1], fptB2Bstd[i-1,j-1] = analysisTools.bootstrapping(fptsB2B[i-1,j-1], numBootsrapSamples)\n",
-    "            #MSMRDmfptsB2B[i-1,j-1], MSMRDfptB2Bstd[i-1,j-1] = analysisTools.bootstrapping(MSMRDfptsB2B[i-1,j-1], numBootsrapSamples)\n",
+    "            MSMRDmfptsB2B[i-1,j-1], MSMRDfptB2Bstd[i-1,j-1] = analysisTools.bootstrapping(MSMRDfptsB2B[i-1,j-1], numBootsrapSamples)\n",
     "            mfptsB2BDiff[i-1,j-1] = np.abs(mfptsB2B[i-1,j-1] - MSMRDmfptsB2B[i-1,j-1])\n",
     "            print(str(i) + \" to \" + str(j) + \":    {:10.4f} {:10.2f} {:10.4f} {:10.2f} {:18.4f}\"\n",
     "                  .format(mfptsB2B[i-1,j-1], fptB2Bstd[i-1,j-1], MSMRDmfptsB2B[i-1,j-1], \n",
@@ -410,8 +403,8 @@
     "# Grid plot for histograms\n",
     "fig, ax = plt.subplots(nrows=6, ncols=5, sharex=True, sharey=True, figsize=(14,10))\n",
     "fig.subplots_adjust(hspace=0, wspace=0)\n",
-    "fsize = 20\n",
-    "fsize2 = 12\n",
+    "fsize = 22\n",
+    "fsize2 = 15\n",
     "plt.rcParams['xtick.labelsize']=fsize\n",
     "plt.rcParams['ytick.labelsize']=fsize\n",
     "#hbins = np.arange(0, 500, 15)\n",
@@ -420,6 +413,7 @@
     "ax0 = fig.add_subplot(111, frameon=False)\n",
     "ax0.set_xlabel(r'$\\mathrm{time}$', fontsize=fsize + 4)\n",
     "ax0.set_ylabel(r'$\\mathrm{FPTs \\ distribution}$', labelpad=17, fontsize=fsize + 4)\n",
+    "ax0.set_title(r'$\\mathrm{Transitions \\ between \\ bound \\ states}$', pad = 10, fontsize=fsize + 10)\n",
     "ax0.set_xticks([0])\n",
     "ax0.set_yticks([0])\n",
     "# Loop over plotting grid\n",
@@ -435,15 +429,15 @@
     "        ax[i,j].hist(MSMRDfptsB2B[i,jj], bins = hbins, alpha=a1, color=c2, weights = MSMRDweightsB2B[i,jj]);\n",
     "        ax[i,j].hist(MSMRDfptsB2B[i,jj], bins = hbins, alpha=a2, edgecolor=c2, lw=1, histtype='step',\n",
     "         facecolor='None', weights = MSMRDweightsB2B[i,jj], label =r'$\\mathrm{MSM/RD}$');\n",
-    "        ax[i,j].text(350,0.1, r'{:d} to {:d}'.format(i+1, jj+1), fontsize=fsize, family=\"serif\")\n",
-    "        ax[i,j].text(200,0.08, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(mfptsB2B[i,jj] , fptB2Bstd[i,jj]), \n",
+    "        ax[i,j].text(350,0.12, r'{:d} to {:d}'.format(i+1, jj+1), fontsize=fsize, family=\"serif\")\n",
+    "        ax[i,j].text(140,0.095, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(mfptsB2B[i,jj] , fptB2Bstd[i,jj]), \n",
     "                     fontsize=fsize2, color=c1)\n",
-    "        ax[i,j].text(220,0.06, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(MSMRDmfptsB2B[i,jj], MSMRDfptB2Bstd[i,jj]), \n",
+    "        ax[i,j].text(160,0.07, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(MSMRDmfptsB2B[i,jj], MSMRDfptB2Bstd[i,jj]), \n",
     "                     fontsize=fsize2, color=c2)\n",
     "        # Add legend\n",
     "        if i == 0 and j == 4:\n",
     "            ax[i,j].legend(fontsize=fsize, fancybox=True, framealpha=1.0, \n",
-    "                           bbox_to_anchor=(1.4, 1.55))\n",
+    "                           bbox_to_anchor=(1.0, 1.0)) #1.4,1.8\n",
     "        # Set plotlimits\n",
     "        ax[i,j].set_xlim([0,600])\n",
     "        #ax[i,j].set_ylim([0,0.23])\n",
@@ -455,63 +449,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# PLOT FOR PAPER #\n",
-    "# Configure figure\n",
-    "fig, (ax1, ax2) = plt.subplots(nrows=2, sharex=True, figsize=(6,5))\n",
-    "fig.subplots_adjust(hspace=0)\n",
-    "fsize = 16\n",
-    "plt.rcParams['xtick.labelsize']=fsize\n",
-    "plt.rcParams['ytick.labelsize']=fsize\n",
-    "hbins = np.arange(0, 500, 15)\n",
-    "\n",
-    "# Set outer common axes titles\n",
-    "ax0 = fig.add_subplot(111, frameon=False)\n",
-    "ax0.set_xlabel(r'$\\mathrm{time}$', fontsize=fsize + 4)\n",
-    "ax0.set_ylabel(r'$\\mathrm{FPTs \\ distribution}$', labelpad=17, fontsize=fsize + 4)\n",
-    "ax0.set_xticks([0])\n",
-    "ax0.set_yticks([0])\n",
-    "\n",
-    "# Plot A to B histogram\n",
-    "ax1.hist(fptsA2B, bins = hbins, alpha=a1, color=c1, weights = weightsA2B);\n",
-    "ax1.hist(fptsA2B, bins = hbins, alpha=a2, edgecolor=c1, lw=2, histtype='step',\n",
-    "         facecolor='None', weights = weightsA2B, label = r'$\\mathrm{Benchmark}$');\n",
-    "ax1.hist(MSMRDfptsA2B, bins = hbins, alpha=a1, color=c2, weights = weightsA2BMSMRD);\n",
-    "ax1.hist(MSMRDfptsA2B, bins = hbins, alpha=a2, edgecolor=c2, lw=2, histtype='step',\n",
-    "         facecolor='None', weights = weightsA2BMSMRD, label =r'$\\mathrm{MSM/RD}$');\n",
-    "ax1.legend(fontsize=fsize, title=r'$A \\rightarrow B$', title_fontsize = fsize, fancybox=True)\n",
-    "ax1.text(60, 0.18, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(mfptA2B, fptA2Bstd), fontsize=fsize, color=c1)\n",
-    "ax1.text(70, 0.13, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(MSMRDmfptA2B, MSMRDfptA2Bstd), fontsize=fsize, color=c2)\n",
-    "ax1.set_xlim([0,500])\n",
-    "ax1.set_ylim([0,0.3])\n",
-    "ax1.set_yticks(np.arange(0, 0.2, step=0.1));\n",
-    "\n",
-    "# Plot B to A histogram\n",
-    "ax2.hist(fptsB2A, bins = hbins, alpha=a1, color=c1, weights = weightsB2A);\n",
-    "ax2.hist(fptsB2A, bins = hbins, alpha=a2, edgecolor=c1, lw=2, histtype='step',\n",
-    "         facecolor='None', weights = weightsB2A, label = r'$\\mathrm{Benchmark}$');\n",
-    "ax2.hist(MSMRDfptsB2A, bins = hbins, alpha=a1, color=c2, weights = weightsB2AMSMRD);\n",
-    "ax2.hist(MSMRDfptsB2A, bins = hbins, alpha=a2, edgecolor=c2, lw=2, histtype='step',\n",
-    "         facecolor='None', weights = weightsB2AMSMRD, label =r'$\\mathrm{MSM/RD}$');\n",
-    "ax2.legend(fontsize=fsize, title=r'$B \\rightarrow A$', title_fontsize = fsize, fancybox=True)\n",
-    "ax2.text(60, 0.18, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(mfptB2A, fptB2Astd), fontsize=fsize, color=c1)\n",
-    "ax2.text(70, 0.13, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(MSMRDmfptB2A, MSMRDfptB2Astd), fontsize=fsize, color=c2)\n",
-    "ax2.set_xlim([0,500])\n",
-    "ax2.set_ylim([0,0.3])\n",
-    "ax2.set_yticks(np.arange(0, 0.2, step=0.1));\n",
-    "\n",
-    "#plt.savefig('bound2bound_FPTs.pdf', bbox_inches='tight')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load all unbound to bound FPT data for $K_{on}$ vs concentration plot"
+    "## MFPT comparison table"
    ]
   },
   {
@@ -520,32 +461,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load all data\n",
-    "numTrajs = 5000\n",
-    "boxsizes = [6, 7, 8, 9, 10, 11, 12]\n",
-    "numBoxes = len(boxsizes)\n",
-    "fpt = [[] for i in range(numBoxes)]\n",
-    "MSMRDfpt = [[] for i in range(numBoxes)]\n",
-    "for i, boxsize in enumerate(boxsizes):\n",
-    "    filename1 = rootDirectory + '/patchyDimerFPTs_2bound_trajs' + \\\n",
-    "        str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
-    "    filename2 = rootDirectory + 'MSMRDpatchyDimerFPTs_2bound_trajs' + \\\n",
-    "        str(numTrajs) + '_lagt' + str(lagtime) +  '_boxsize' + str(boxsize) + '.xyz'\n",
-    "    with open(filename1) as file:\n",
-    "        for line in file:\n",
-    "            state, time = line.split(\" \")\n",
-    "            fpt[i].append(float(time))\n",
-    "    with open(filename2) as file:\n",
-    "        for line in file:\n",
-    "            state, time = line.split(\" \")\n",
-    "            MSMRDfpt[i].append(float(time))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Calculation of FPTs and comparisons plots"
+    "# Calculate MFPT difference between benchmark and MSM/RD for all transitions between bound states\n",
+    "MFPTdiff = MSMRDmfptsB2B - mfptsB2B\n",
+    "MFPTdiffRel = 0.0 * MFPTdiff\n",
+    "MFPTDiffStd = 0.0 * MFPTdiff \n",
+    "MFPTDiffRelStd = 0.0 * MFPTdiff \n",
+    "for i in boundStates:\n",
+    "    for j in boundStates:\n",
+    "        if mfptsB2B[i-1,j-1] != 0:\n",
+    "            MFPTdiffRel[i-1,j-1] = MFPTdiff[i-1,j-1]/mfptsB2B[i-1,j-1]\n",
+    "        MFPTDiffStd[i-1,j-1] = np.sqrt( fptB2Bstd[i-1,j-1]**2 + MSMRDfptB2Bstd[i-1,j-1]**2 )\n",
+    "        if fptB2Bstd[i-1,j-1] != 0:\n",
+    "            MFPTDiffRelStd[i-1,j-1] = MFPTDiffStd[i-1,j-1]/mfptsB2B[i-1,j-1]"
    ]
   },
   {
@@ -554,137 +481,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculate meand and bootstrapping error\n",
-    "numBootsrapSamples = 1000\n",
-    "numValues = 250\n",
-    "meanKon = np.zeros(numBoxes)\n",
-    "meanKonMSMRD = np.zeros(numBoxes)\n",
-    "stdDevKon = np.zeros(numBoxes)\n",
-    "stdDevKonMSMRD = np.zeros(numBoxes)\n",
-    "errorKon = np.zeros(numBoxes)\n",
-    "errorKonMSMRD = np.zeros(numBoxes)\n",
-    "for i, boxsize in enumerate(boxsizes):\n",
-    "    # Calculate bootstrapping samples of mean first passage times\n",
-    "    mfpt, fptStdDev = analysisTools.bootstrapping(fpt[i], numBootsrapSamples, numValues)\n",
-    "    MSMRDmfpt, MSMRDfptStdDev = analysisTools.bootstrapping(MSMRDfpt[i], numBootsrapSamples, numValues)\n",
-    "    # Calculate on rate corresponding to bootstrapping samples\n",
-    "    meanKon[i], stdDevKon[i] = 1.0/mfpt, fptStdDev/(mfpt*mfpt)\n",
-    "    meanKonMSMRD[i], stdDevKonMSMRD[i] = 1.0/MSMRDmfpt, MSMRDfptStdDev/(MSMRDmfpt*MSMRDmfpt)\n",
-    "    # Percentual errors\n",
-    "    errorKon[i] = stdDevKon[i] #1.96*stdDevKon[i]/numBootsrapSamples\n",
-    "    errorKonMSMRD[i] = stdDevKonMSMRD[i] #1.96*stdDevKonMSMRD[i]/numBootsrapSamples"
+    "# Plot square grid with errors\n",
+    "fig, ax = plt.subplots(figsize=(6,6))\n",
+    "im = ax.imshow(MFPTdiffRel, cmap='RdBu')\n",
+    "im.set_clim(-0.2,0.2)\n",
+    "# Set labels\n",
+    "ax.set_title(r\"$\\mathrm{MFPT \\ relative \\ error}$\", fontsize = fsize + 2)\n",
+    "ax.set_ylabel(r\"$\\mathrm{Initial \\ bound \\ state}$\", fontsize = fsize + 2)\n",
+    "ax.set_xlabel(r'$\\mathrm{Final \\ bound \\ state}$', fontsize = fsize + 2)\n",
+    "# We want to show all ticks...\n",
+    "ax.set_xticks(np.arange(len(boundStates)))\n",
+    "ax.set_yticks(np.arange(len(boundStates)))\n",
+    "# ... and label them with the respective list entries\n",
+    "ax.set_xticklabels(boundStates)\n",
+    "ax.set_yticklabels(boundStates)\n",
+    "# Loop over data dimensions and create text annotations.\n",
+    "for i in range(len(boundStates)):\n",
+    "    for j in range(len(boundStates)):\n",
+    "        if i != j:\n",
+    "            #text = ax.text(j, i, '{:.2f}'.format(MFPTdiffRel[i, j]), ha=\"center\", \n",
+    "            #               va=\"center\", color=\"w\", fontsize =fsize)\n",
+    "            text = ax.text(j, i, r'$\\pm${:}'.format(round(MFPTDiffRelStd[i, j],2)), ha=\"center\", \n",
+    "                           va=\"center\", color=\"k\", fontsize =fsize-2)\n",
+    "# Set colorbar\n",
+    "cbar = fig.colorbar(im, ax=ax, shrink = 0.8)\n",
+    "cbar.set_ticks([-0.1,0.0,0.1])\n",
+    "cbar.set_ticklabels([-0.1,0.0,0.1])\n",
+    "# Show plot\n",
+    "fig.tight_layout()\n",
+    "#plt.show()\n",
+    "#plt.savefig('patchyProtein_MFPTs_relError.pdf', bbox_inches='tight')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Plot on rates vs concentration:\n",
-    "fig = plt.figure()\n",
-    "fsize = 16\n",
-    "plt.rcParams['xtick.labelsize']=fsize\n",
-    "plt.rcParams['ytick.labelsize']=fsize\n",
-    "ax = fig.add_subplot(111)\n",
-    "linewidth = 2\n",
-    "concentrations = 1.0/pow(np.array(boxsizes),3)\n",
-    "\n",
-    "# Plots with shaded regions as error bars\n",
-    "ax.plot(concentrations, meanKon, marker='o', markersize=6, linewidth=linewidth , color=c1, \n",
-    "        label=r'$\\mathrm{Benchmark}$')\n",
-    "ax.fill_between(concentrations, meanKon-errorKon, meanKon+errorKon, alpha=0.3, edgecolor=c1, facecolor=c1)\n",
-    "\n",
-    "# Traditional error bar plots\n",
-    "ax.errorbar(concentrations, meanKonMSMRD, yerr=errorKonMSMRD, marker='o', markersize=6, linestyle='--',\n",
-    "            elinewidth=2, linewidth=linewidth, capsize=5, color=c2, label=r'$\\mathrm{MSM/RD}$')\n",
-    "\n",
-    "ax.set_yscale('log')\n",
-    "ax.set_xlabel(r'$\\mathrm{Concentration}$ ($1/\\mathrm{Volume}$)', fontsize = fsize+4)\n",
-    "ax.set_ylabel(r'$\\mathrm{log}(k_\\mathrm{on}$)', fontsize = fsize+6)\n",
-    "ax.set_yticks([0.001,.01])\n",
-    "#ax.set_ylim([0,0.12])\n",
-    "ax.legend(fontsize=fsize, title_fontsize = fsize, fancybox=True)\n",
-    "plt.savefig('kon_dimer.pdf', bbox_inches='tight')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Plot equilibrium constant vs concentration\n",
-    "fig = plt.figure()\n",
-    "fsize = 16\n",
-    "plt.rcParams['xtick.labelsize']=fsize\n",
-    "plt.rcParams['ytick.labelsize']=fsize\n",
-    "ax = fig.add_subplot(111)\n",
-    "linewidth = 2\n",
-    "concentrations = 1.0/pow(np.array(boxsizes),3)\n",
-    "\n",
-    "# Calculate Keq and errors\n",
-    "Keq = meanKon/meanKoff\n",
-    "KeqMSMRD = meanKonMSMRD/meanKoffMSMRD\n",
-    "errorKeq = Keq*(errorKon/meanKon + koffstd/meanKoff)\n",
-    "errorKeqMSMRD = KeqMSMRD*(errorKonMSMRD/meanKonMSMRD + koffstdMSMRD/meanKoffMSMRD)\n",
-    "\n",
-    "# Plots with shaded regions as error bars\n",
-    "ax.plot(concentrations, Keq, marker='o', markersize=6, linewidth=linewidth , color=c1, \n",
-    "        label=r'$\\mathrm{Benchmark}$')\n",
-    "ax.fill_between(concentrations, Keq-errorKeq, Keq+errorKeq, alpha=0.3, edgecolor=c1, facecolor=c1)\n",
-    "\n",
-    "# Traditional error bar plots\n",
-    "ax.errorbar(concentrations, KeqMSMRD, yerr=errorKeqMSMRD, marker='o', markersize=6, linestyle='--',\n",
-    "            elinewidth=2, linewidth=linewidth, capsize=5, color=c2, label=r'$\\mathrm{MSM/RD}$')\n",
-    "\n",
-    "ax.set_yscale('log')\n",
-    "ax.set_xlabel(r'$\\mathrm{Concentration}$ ($1/\\mathrm{Volume}$)', fontsize = fsize+4)\n",
-    "ax.set_ylabel(r'$\\mathrm{log}(k_\\mathrm{eq}$)', fontsize = fsize+6)\n",
-    "ax.legend(fontsize=fsize, title_fontsize = fsize, fancybox=True)\n",
-    "plt.savefig('keq_dimer.pdf', bbox_inches='tight')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Plot on rates vs concentration, zoomed\n",
-    "fig = plt.figure()\n",
-    "fsize = 16\n",
-    "ax = fig.add_subplot(111)\n",
-    "linewidth = 2\n",
-    "concentrations = 1.0/pow(np.array(boxsizes),3)\n",
-    "\n",
-    "# Plots with shaded regions as error bars\n",
-    "ax.plot(concentrations, meanKon, marker='o', markersize=6, linewidth=linewidth , color='C1', \n",
-    "        label=r'$\\mathrm{Benchmark}$')\n",
-    "ax.fill_between(concentrations, meanKon-errorKon, meanKon+errorKon, alpha=0.3, edgecolor='C1', facecolor='C1')\n",
-    "#ax.plot(concentrations, meanKonMSMRD, marker='o', markersize=6, linewidth=0*linewidth, color='C0', \n",
-    "#        label=r'$\\mathrm{MSM/RD}$)\n",
-    "#ax.fill_between(concentrations, meanKonMSMRD-errorKonMSMRD, meanKonMSMRD+errorKonMSMRD, alpha=0.35, \n",
-    "#                edgecolor='C0', facecolor='C0')\n",
-    "\n",
-    "# Traditional error bar plots\n",
-    "#ax.errorbar(concentrations, meanKon, yerr=errorKon, marker='o', markersize=6, elinewidth=2, \n",
-    "#            linewidth=linewidth , capsize=5, color='C1', label=r'$\\mathrm{Benchmark}$')\n",
-    "ax.errorbar(concentrations, meanKonMSMRD, yerr=errorKonMSMRD, marker='o', markersize=6, linestyle='--',\n",
-    "            elinewidth=2, linewidth=linewidth, capsize=5, color='C0', label=r'$\\mathrm{MSM/RD}$')\n",
-    "ax.set_yscale('log')\n",
-    "ax.set_xlim([0.0018,0.0047])\n",
-    "ax.set_ylim([0.003,0.018])\n",
-    "ax.set_xticks([], [])\n",
-    "#plt.savefig('kon_dimer_zoom.pdf', bbox_inches='tight')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
