--- a/examples/tests/initialConditionPatchyProtein.ipynb
+++ b/examples/tests/initialConditionPatchyProtein.ipynb
@@ -28,7 +28,7 @@
     "bodytype = 'rigidbody'\n",
     "particleTypes = [0, 1]\n",
     "numBoundStates = 6\n",
-    "initialState = 2\n",
+    "initialState = 1\n",
     "\n",
     "# Parameters related to patchy Particle potential with angular dependence\n",
     "# Define Patchy Protein potential parameters (This values are fixed and should match\n",
@@ -179,6 +179,8 @@
     "part1, part2 = partlist[0], partlist[1]\n",
     "dummyTraj = msmrd2.trajectories.patchyProtein(2,1)\n",
     "boundState = dummyTraj.getState(partlist[0], partlist[1])\n",
+    "print(\"Initial condition bound state:\", initialState)\n",
+    "print(\"Calculated bound state by trajectory:\", boundState)\n",
     "if (boundState != initialState):\n",
     "    print(\"Warning, getState function (sampleDiscreteState) is not returning the correct state.\")"
    ]
@@ -200,11 +202,11 @@
     "refVec3 = np.array([0., -1., 0.])\n",
     "refVec4 = np.array([0., 0., 1.])\n",
     "refVec5 = np.array([0., 0., -1.])\n",
-    "timesteps = 100000\n",
+    "timesteps = 1 #100000\n",
     "stride = 100 #10 #1000\n",
     "for i in range(timesteps):\n",
     "    if i%stride == 0:\n",
-    "        datafile.write(str(numSpheres2Draw) + '\\n')quatRotations\n",
+    "        datafile.write(str(numSpheres2Draw) + '\\n')\n",
     "        datafile.write(str(0) + '\\n')\n",
     "    for j, part in enumerate(partlist):\n",
     "        if i%stride == 0:\n",
