Minor changes to dimer plotting notebook

--- a/examples/benchmark/plotPatchyDimerFPTs.ipynb
+++ b/examples/benchmark/plotPatchyDimerFPTs.ipynb
@@ -37,11 +37,11 @@
    "outputs": [],
    "source": [
     "# Color definitions\n",
-    "c1 = 'xkcd:bright orange' # 'darkorange' #'C1' # '#ff3300' # for benchmark\n",
-    "c2 = 'royalblue' #'royalblue' # 'C0' # '#0099ff' # for MSM/RD\n",
+    "c1 = '#ff3300' #'xkcd:bright orange' # 'darkorange' #'C1' # '#ff3300' # for benchmark\n",
+    "c2 = '#0099ff' #'royalblue' #'royalblue' # 'C0' # '#0099ff' # for MSM/RD\n",
     "# Alpha transparency definition\n",
     "a1 = 0.2 #0.2\n",
-    "a2 = 0.9 #0.7"
+    "a2 = 0.6 #0.9 #0.7"
    ]
   },
   {
@@ -146,11 +146,17 @@
     "    konBstd = fptBstd/(mfptB*mfptB)\n",
     "    MSMRDkonAstd = MSMRDfptAstd/(MSMRDmfptA*MSMRDmfptA)\n",
     "    MSMRDkonBstd = MSMRDfptBstd/(MSMRDmfptB*MSMRDmfptB)\n",
+    "    errorKonA = np.abs(mkonA - MSMRDmkonA)\n",
+    "    relErrorKonA = errorKonA/mkonA\n",
+    "    errorKonB = np.abs(mkonB - MSMRDmkonB)\n",
+    "    relErrorKonB = errorKonB/mkonB\n",
     "    print(\"On rates:\")\n",
     "    print(\"Bootstrapping mean and std (A):\", mkonA, konAstd)\n",
     "    print(\"Bootstrapping mean and std (B):\", mkonB, konBstd)\n",
     "    print(\"Bootstrapping MSMRD mean and std (A):\", MSMRDmkonA, MSMRDkonAstd)\n",
-    "    print(\"Bootstrapping MSMRD mean and std (B):\", MSMRDmkonB, MSMRDkonBstd)"
+    "    print(\"Bootstrapping MSMRD mean and std (B):\", MSMRDmkonB, MSMRDkonBstd)\n",
+    "    print(\"Error and relative error (A):\", errorKonA, relErrorKonA)\n",
+    "    print(\"Error and relative error (B):\", errorKonB, relErrorKonB)"
    ]
   },
   {
@@ -309,13 +315,19 @@
     "    koffstd = (koffAstd + koffBstd)/2.0\n",
     "    meanKoffMSMRD = (mkoffAMSMRD + mkoffBMSMRD)/2.0\n",
     "    koffstdMSMRD = (koffAstdMSMRD + koffBstdMSMRD)/2.0\n",
+    "    errorKoffA = np.abs(mkoffA - mkoffAMSMRD)\n",
+    "    relErrorKoffA = errorKoffA/mkoffA\n",
+    "    errorKoffB = np.abs(mkoffB - mkoffBMSMRD)\n",
+    "    relErrorKoffB = errorKoffB/mkoffB\n",
     "    print(\"Off rates:\")\n",
     "    print(\"Bootstrapping mean and std (A):\", mkoffA, koffAstd)\n",
     "    print(\"Bootstrapping mean and std (B):\", mkoffB, koffBstd)\n",
     "    print(\"Bootstrapping mean and std (Average):\", meanKoff, koffstd)\n",
     "    print(\"Bootstrapping MSMRD mean and std (A):\", mkoffAMSMRD, koffAstdMSMRD)\n",
     "    print(\"Bootstrapping MSMRD mean and std (B):\", mkoffBMSMRD, koffBstdMSMRD)\n",
-    "    print(\"Bootstrapping MSMRD mean and std (Average):\", meanKoffMSMRD, koffstdMSMRD)"
+    "    print(\"Bootstrapping MSMRD mean and std (Average):\", meanKoffMSMRD, koffstdMSMRD)\n",
+    "    print(\"Error and relative error (A):\", errorKoffA, relErrorKoffA)\n",
+    "    print(\"Error and relative error (B):\", errorKoffB, relErrorKoffB)"
    ]
   },
   {
@@ -452,7 +464,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Compuate mean and standard deviation of bootstrapped samples of benchmark\n",
+    "# Compuate mean and standard deviation of bootstrapped samples of benchmark as well as relative errors\n",
     "numBootsrapSamples = 2000\n",
     "mfptA2B, fptA2Bstd = analysisTools.bootstrapping(fptsA2B, numBootsrapSamples)\n",
     "mfptB2A, fptB2Astd = analysisTools.bootstrapping(fptsB2A, numBootsrapSamples)\n",
@@ -461,7 +473,27 @@
     "MSMRDmfptA2B, MSMRDfptA2Bstd = analysisTools.bootstrapping(MSMRDfptsA2B, numBootsrapSamples)\n",
     "MSMRDmfptB2A, MSMRDfptB2Astd = analysisTools.bootstrapping(MSMRDfptsB2A, numBootsrapSamples)\n",
     "print(\"MSMRD bootstrapping mean and std (A): \", MSMRDmfptA2B, MSMRDfptA2Bstd)\n",
-    "print(\"MSMRD bootstrapping mean and std (B): \", MSMRDmfptB2A, MSMRDfptB2Astd)"
+    "print(\"MSMRD bootstrapping mean and std (B): \", MSMRDmfptB2A, MSMRDfptB2Astd)\n",
+    "# Calculates A2b and B2A rates\n",
+    "mkA2B = 1.0/mfptA2B\n",
+    "mkB2A = 1.0/mfptB2A\n",
+    "kA2Bstd = fptA2Bstd/(mfptA2B*mfptA2B)\n",
+    "kB2Astd = fptB2Astd/(mfptB2A*mfptB2A)\n",
+    "MSMRDmkA2B = 1.0/MSMRDmfptA2B\n",
+    "MSMRDmkB2A = 1.0/MSMRDmfptB2A\n",
+    "MSMRDkA2Bstd = MSMRDfptA2Bstd/(MSMRDmfptA2B*MSMRDmfptA2B)\n",
+    "MSMRDkB2Astd = MSMRDfptB2Astd/(MSMRDmfptB2A*MSMRDmfptB2A)\n",
+    "errorKA2B = np.abs(mkA2B - MSMRDmkA2B)\n",
+    "relErrorKA2B = errorKA2B/mkA2B\n",
+    "errorKB2A = np.abs(mkB2A - MSMRDmkB2A)\n",
+    "relErrorKB2A = errorKB2A/mkB2A\n",
+    "print(\"On rates:\")\n",
+    "print(\"Bootstrapping mean and std (A2B):\", mkA2B, kA2Bstd)\n",
+    "print(\"Bootstrapping mean and std (B2A):\", mkB2A, kB2Astd)\n",
+    "print(\"Bootstrapping MSMRD mean and std (A2B):\", MSMRDmkA2B, MSMRDkA2Bstd)\n",
+    "print(\"Bootstrapping MSMRD mean and std (B2A):\", MSMRDmkB2A, MSMRDkB2Astd)\n",
+    "print(\"Error and relative error (A2B):\", errorKA2B, relErrorKA2B)\n",
+    "print(\"Error and relative error (B2A):\", errorKB2A, relErrorKB2A)"
    ]
   },
   {
@@ -599,23 +631,29 @@
     "ax = fig.add_subplot(111)\n",
     "linewidth = 2\n",
     "concentrations = 1.0/pow(np.array(boxsizes),3)\n",
+    "# Assuming moleculas have a diameter of 5nm, the actual boxsize is 5*boxisze nm,\n",
+    "# lets convert to Molar concentration\n",
+    "avogadro = 6.022E23\n",
+    "oneLiter2nm = 1.0E24\n",
+    "concentrationsMolar = concentrations*oneLiter2nm/avogadro\n",
     "\n",
     "# Plots with shaded regions as error bars\n",
-    "ax.plot(concentrations, meanKon, marker='o', markersize=6, linewidth=linewidth , color=c1, \n",
+    "ax.plot(concentrationsMolar, meanKon, marker='o', markersize=6, linewidth=linewidth , color=c1, \n",
     "        label=r'$\\mathrm{Benchmark}$')\n",
-    "ax.fill_between(concentrations, meanKon-errorKon, meanKon+errorKon, alpha=0.3, edgecolor=c1, facecolor=c1)\n",
+    "ax.fill_between(concentrationsMolar, meanKon-errorKon, meanKon+errorKon, alpha=0.3, edgecolor=c1, facecolor=c1)\n",
     "\n",
     "# Traditional error bar plots\n",
-    "ax.errorbar(concentrations, meanKonMSMRD, yerr=errorKonMSMRD, marker='o', markersize=6, linestyle='--',\n",
+    "ax.errorbar(concentrationsMolar, meanKonMSMRD, yerr=errorKonMSMRD, marker='o', markersize=6, linestyle='--',\n",
     "            elinewidth=2, linewidth=linewidth, capsize=5, color=c2, label=r'$\\mathrm{MSM/RD}$')\n",
     "\n",
     "ax.set_yscale('log')\n",
-    "ax.set_xlabel(r'$\\mathrm{Concentration}$ ($1/\\mathrm{Volume}$)', fontsize = fsize+4)\n",
+    "#ax.set_xlabel(r'$\\mathrm{Concentration}$ ($1/\\mathrm{Volume}$)', fontsize = fsize+4)\n",
+    "ax.set_xlabel(r'$\\mathrm{Concentration}$ ($M$)', fontsize = fsize+4)\n",
     "ax.set_ylabel(r'$\\mathrm{log}(k_\\mathrm{on}$)', fontsize = fsize+6)\n",
     "ax.set_yticks([0.001,.01])\n",
     "#ax.set_ylim([0,0.12])\n",
     "ax.legend(fontsize=fsize, title_fontsize = fsize, fancybox=True)\n",
-    "plt.savefig('kon_dimer.pdf', bbox_inches='tight')"
+    "#plt.savefig('kon_dimer.pdf', bbox_inches='tight')"
    ]
   },
   {
@@ -631,7 +669,6 @@
     "plt.rcParams['ytick.labelsize']=fsize\n",
     "ax = fig.add_subplot(111)\n",
     "linewidth = 2\n",
-    "concentrations = 1.0/pow(np.array(boxsizes),3)\n",
     "\n",
     "# Calculate Keq and errors\n",
     "Keq = meanKon/meanKoff\n",
@@ -640,19 +677,19 @@
     "errorKeqMSMRD = KeqMSMRD*(errorKonMSMRD/meanKonMSMRD + koffstdMSMRD/meanKoffMSMRD)\n",
     "\n",
     "# Plots with shaded regions as error bars\n",
-    "ax.plot(concentrations, Keq, marker='o', markersize=6, linewidth=linewidth , color=c1, \n",
+    "ax.plot(concentrationsMolar, Keq, marker='o', markersize=6, linewidth=linewidth , color=c1, \n",
     "        label=r'$\\mathrm{Benchmark}$')\n",
-    "ax.fill_between(concentrations, Keq-errorKeq, Keq+errorKeq, alpha=0.3, edgecolor=c1, facecolor=c1)\n",
+    "ax.fill_between(concentrationsMolar, Keq-errorKeq, Keq+errorKeq, alpha=0.3, edgecolor=c1, facecolor=c1)\n",
     "\n",
     "# Traditional error bar plots\n",
-    "ax.errorbar(concentrations, KeqMSMRD, yerr=errorKeqMSMRD, marker='o', markersize=6, linestyle='--',\n",
+    "ax.errorbar(concentrationsMolar, KeqMSMRD, yerr=errorKeqMSMRD, marker='o', markersize=6, linestyle='--',\n",
     "            elinewidth=2, linewidth=linewidth, capsize=5, color=c2, label=r'$\\mathrm{MSM/RD}$')\n",
     "\n",
     "ax.set_yscale('log')\n",
-    "ax.set_xlabel(r'$\\mathrm{Concentration}$ ($1/\\mathrm{Volume}$)', fontsize = fsize+4)\n",
+    "ax.set_xlabel(r'$\\mathrm{Concentration}$ ($M$)', fontsize = fsize+4)\n",
     "ax.set_ylabel(r'$\\mathrm{log}(k_\\mathrm{eq}$)', fontsize = fsize+6)\n",
     "ax.legend(fontsize=fsize, title_fontsize = fsize, fancybox=True)\n",
-    "plt.savefig('keq_dimer.pdf', bbox_inches='tight')"
+    "#plt.savefig('keq_dimer.pdf', bbox_inches='tight')"
    ]
   },
   {
@@ -666,12 +703,11 @@
     "fsize = 16\n",
     "ax = fig.add_subplot(111)\n",
     "linewidth = 2\n",
-    "concentrations = 1.0/pow(np.array(boxsizes),3)\n",
     "\n",
     "# Plots with shaded regions as error bars\n",
-    "ax.plot(concentrations, meanKon, marker='o', markersize=6, linewidth=linewidth , color='C1', \n",
+    "ax.plot(concentrationsMolar, meanKon, marker='o', markersize=6, linewidth=linewidth , color='C1', \n",
     "        label=r'$\\mathrm{Benchmark}$')\n",
-    "ax.fill_between(concentrations, meanKon-errorKon, meanKon+errorKon, alpha=0.3, edgecolor='C1', facecolor='C1')\n",
+    "ax.fill_between(concentrationsMolar, meanKon-errorKon, meanKon+errorKon, alpha=0.3, edgecolor='C1', facecolor='C1')\n",
     "#ax.plot(concentrations, meanKonMSMRD, marker='o', markersize=6, linewidth=0*linewidth, color='C0', \n",
     "#        label=r'$\\mathrm{MSM/RD}$)\n",
     "#ax.fill_between(concentrations, meanKonMSMRD-errorKonMSMRD, meanKonMSMRD+errorKonMSMRD, alpha=0.35, \n",
@@ -680,7 +716,7 @@
     "# Traditional error bar plots\n",
     "#ax.errorbar(concentrations, meanKon, yerr=errorKon, marker='o', markersize=6, elinewidth=2, \n",
     "#            linewidth=linewidth , capsize=5, color='C1', label=r'$\\mathrm{Benchmark}$')\n",
-    "ax.errorbar(concentrations, meanKonMSMRD, yerr=errorKonMSMRD, marker='o', markersize=6, linestyle='--',\n",
+    "ax.errorbar(concentrationsMolar, meanKonMSMRD, yerr=errorKonMSMRD, marker='o', markersize=6, linestyle='--',\n",
     "            elinewidth=2, linewidth=linewidth, capsize=5, color='C0', label=r'$\\mathrm{MSM/RD}$')\n",
     "ax.set_yscale('log')\n",
     "ax.set_xlim([0.0018,0.0047])\n",
@@ -699,9 +735,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:msmrd-dev]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-msmrd-dev-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -713,7 +749,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
