--- a/examples/benchmark/plotPatchyProteinFPTs.ipynb
+++ b/examples/benchmark/plotPatchyProteinFPTs.ipynb
@@ -11,6 +11,8 @@
     "import msmrd2.tools.analysis as analysisTools\n",
     "import timeit\n",
     "from matplotlib import rc\n",
+    "import matplotlib as mpl\n",
+    "import matplotlib.colors as colors\n",
     "rc('text', usetex=True)"
    ]
   },
@@ -126,9 +128,12 @@
     "    MSMRDmkon = 1.0/MSMRDmfpt\n",
     "    konstd = fptstd/(mfpt*mfpt)\n",
     "    MSMRDkonstd = MSMRDfptstd/(MSMRDmfpt*MSMRDmfpt)\n",
+    "    konError = np.abs(mkon - MSMRDmkon)\n",
+    "    konRelError = konError/mkon\n",
     "    print(\"On rates:\")\n",
     "    print(\"Bootstrapping mean and std:\", mkon, konstd)\n",
-    "    print(\"Bootstrapping MSMRD mean and std (A):\", MSMRDmkon, MSMRDkonstd)"
+    "    print(\"Bootstrapping MSMRD mean and std (A):\", MSMRDmkon, MSMRDkonstd)\n",
+    "    print(\"Error and relative error:\", konError, konRelError)"
    ]
   },
   {
@@ -249,9 +254,12 @@
     "mkoffMSMRD = 1.0/MSMRDmfpt2unbound\n",
     "koffstd = fpt2unboundstd/(mfpt2unbound*mfpt2unbound)\n",
     "koffstdMSMRD = MSMRDfpt2unboundstd/(MSMRDmfpt2unbound*MSMRDmfpt2unbound)\n",
+    "koffError = np.abs(mkoff - mkoffMSMRD)\n",
+    "koffRelError = koffError/mkoff\n",
     "print(\"Off rates:\")\n",
     "print(\"Bootstrapping mean and std:\", mkoff, koffstd)\n",
-    "print(\"Bootstrapping MSMRD mean and std:\", mkoffMSMRD, koffstdMSMRD)"
+    "print(\"Bootstrapping MSMRD mean and std:\", mkoffMSMRD, koffstdMSMRD)\n",
+    "print(\"Error and relative error:\", koffError, koffRelError)"
    ]
   },
   {
@@ -381,17 +389,19 @@
     "fptB2Bstd = np.zeros([len(boundStates),len(boundStates)])\n",
     "MSMRDfptB2Bstd = np.zeros([len(boundStates),len(boundStates)])\n",
     "mfptsB2BDiff = np.zeros([len(boundStates),len(boundStates)])\n",
+    "mfptsB2BRelDiff = np.zeros([len(boundStates),len(boundStates)])\n",
     "print(\"Begins boostrapping:\") \n",
-    "print(\"Transition     MFPT       stddev     MSMRD-MFPT  MSMRD-stddev    Difference\")\n",
+    "print(\"Transition     MFPT       stddev     MSMRD-MFPT  MSMRD-stddev    Error       Relative Error\")\n",
     "for i in boundStates:\n",
     "    for j in boundStates:\n",
     "        if i != j:\n",
     "            mfptsB2B[i-1,j-1], fptB2Bstd[i-1,j-1] = analysisTools.bootstrapping(fptsB2B[i-1,j-1], numBootsrapSamples)\n",
     "            MSMRDmfptsB2B[i-1,j-1], MSMRDfptB2Bstd[i-1,j-1] = analysisTools.bootstrapping(MSMRDfptsB2B[i-1,j-1], numBootsrapSamples)\n",
     "            mfptsB2BDiff[i-1,j-1] = np.abs(mfptsB2B[i-1,j-1] - MSMRDmfptsB2B[i-1,j-1])\n",
-    "            print(str(i) + \" to \" + str(j) + \":    {:10.4f} {:10.2f} {:10.4f} {:10.2f} {:18.4f}\"\n",
+    "            mfptsB2BRelDiff[i-1,j-1] = mfptsB2BDiff[i-1,j-1]/mfptsB2B[i-1,j-1]\n",
+    "            print(str(i) + \" to \" + str(j) + \":    {:10.4f} {:10.2f} {:10.4f} {:10.2f} {:16.4f} {:12.4f}\"\n",
     "                  .format(mfptsB2B[i-1,j-1], fptB2Bstd[i-1,j-1], MSMRDmfptsB2B[i-1,j-1], \n",
-    "                          MSMRDfptB2Bstd[i-1,j-1], mfptsB2BDiff[i-1,j-1]))"
+    "                          MSMRDfptB2Bstd[i-1,j-1], mfptsB2BDiff[i-1,j-1], mfptsB2BRelDiff[i-1,j-1]))"
    ]
   },
   {
@@ -462,7 +472,7 @@
    "outputs": [],
    "source": [
     "# Calculate MFPT difference between benchmark and MSM/RD for all transitions between bound states\n",
-    "MFPTdiff = MSMRDmfptsB2B - mfptsB2B\n",
+    "MFPTdiff = mfptsB2BDiff\n",
     "MFPTdiffRel = 0.0 * MFPTdiff\n",
     "MFPTDiffStd = 0.0 * MFPTdiff \n",
     "MFPTDiffRelStd = 0.0 * MFPTdiff \n",
@@ -483,8 +493,8 @@
    "source": [
     "# Plot square grid with errors\n",
     "fig, ax = plt.subplots(figsize=(6,6))\n",
-    "im = ax.imshow(MFPTdiffRel, cmap='RdBu')\n",
-    "im.set_clim(-0.2,0.2)\n",
+    "im = ax.imshow(MFPTdiffRel, cmap='Blues')\n",
+    "im.set_clim(0.0,0.15)\n",
     "# Set labels\n",
     "ax.set_title(r\"$\\mathrm{MFPT \\ relative \\ error}$\", fontsize = fsize + 2)\n",
     "ax.set_ylabel(r\"$\\mathrm{Initial \\ bound \\ state}$\", fontsize = fsize + 2)\n",
@@ -505,12 +515,135 @@
     "                           va=\"center\", color=\"k\", fontsize =fsize-2)\n",
     "# Set colorbar\n",
     "cbar = fig.colorbar(im, ax=ax, shrink = 0.8)\n",
-    "cbar.set_ticks([-0.1,0.0,0.1])\n",
-    "cbar.set_ticklabels([-0.1,0.0,0.1])\n",
+    "cbar.set_ticks([0.0,0.1])\n",
+    "cbar.set_ticklabels([0.0,0.1])\n",
     "# Show plot\n",
     "fig.tight_layout()\n",
     "#plt.show()\n",
     "#plt.savefig('patchyProtein_MFPTs_relError.pdf', bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.mean(mfptsB2BRelDiff)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rates comaprison"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ratesB2B = np.zeros([len(boundStates),len(boundStates)])\n",
+    "ratesB2Bstd = np.zeros([len(boundStates),len(boundStates)])\n",
+    "MSMRDratesB2B = np.zeros([len(boundStates),len(boundStates)])\n",
+    "MSMRDratesB2Bstd = np.zeros([len(boundStates),len(boundStates)])\n",
+    "ratesB2BDiff = np.zeros([len(boundStates),len(boundStates)])\n",
+    "ratesB2BRelDiff = np.zeros([len(boundStates),len(boundStates)])\n",
+    "print(\"Transition     rate       stddev     MSMRD-rate  MSMRD-stddev    Error       Relative Error\")\n",
+    "for i in boundStates:\n",
+    "    for j in boundStates:\n",
+    "        if i != j:\n",
+    "            ratesB2B[i-1,j-1] = 1.0/mfptsB2B[i-1,j-1]\n",
+    "            ratesB2Bstd[i-1,j-1] = ratesB2B[i-1,j-1]*fptB2Bstd[i-1,j-1]/mfptsB2B[i-1,j-1]\n",
+    "            MSMRDratesB2B[i-1,j-1] = 1.0/MSMRDmfptsB2B[i-1,j-1]\n",
+    "            MSMRDratesB2Bstd[i-1,j-1] = MSMRDratesB2B[i-1,j-1]*MSMRDfptB2Bstd[i-1,j-1]/MSMRDmfptsB2B[i-1,j-1]\n",
+    "            ratesB2BDiff[i-1,j-1] = np.abs(ratesB2B[i-1,j-1] - MSMRDratesB2B[i-1,j-1])\n",
+    "            ratesB2BRelDiff[i-1,j-1] = ratesB2BDiff[i-1,j-1]/ratesB2B[i-1,j-1]\n",
+    "            print(str(i) + \" to \" + str(j) + \":    {:10.4f} {:10.5f} {:10.4f} {:12.5f} {:16.4f} {:12.4f}\"\n",
+    "                  .format(ratesB2B[i-1,j-1], ratesB2Bstd[i-1,j-1], MSMRDratesB2B[i-1,j-1], \n",
+    "                          MSMRDratesB2Bstd[i-1,j-1], ratesB2BDiff[i-1,j-1], ratesB2BRelDiff[i-1,j-1]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Rates comparison table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate MFPT difference between benchmark and MSM/RD for all transitions between bound states\n",
+    "ratesDiffStd = np.zeros([len(boundStates),len(boundStates)])\n",
+    "ratesDiffRelStd = np.zeros([len(boundStates),len(boundStates)])\n",
+    "for i in boundStates:\n",
+    "    for j in boundStates:\n",
+    "        ratesDiffStd[i-1,j-1] = np.sqrt( ratesB2Bstd[i-1,j-1]**2 + MSMRDratesB2Bstd[i-1,j-1]**2 )\n",
+    "        if ratesB2Bstd[i-1,j-1] != 0:\n",
+    "            ratesDiffRelStd[i-1,j-1] = ratesDiffStd[i-1,j-1]/ratesB2B[i-1,j-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Truncate colormap function\n",
+    "def truncate_colormap(cmap='jet', minval=0.0, maxval=1.0, n=1000):\n",
+    "    '''truncate_colormap(cmapIn='jet', minval=0.0, maxval=1.0, n=100)'''    \n",
+    "    cmapIn = plt.get_cmap(cmap)\n",
+    "\n",
+    "    new_cmap = colors.LinearSegmentedColormap.from_list(\n",
+    "        'trunc({n},{a:.2f},{b:.2f})'.format(n=cmapIn.name, a=minval, b=maxval),\n",
+    "        cmapIn(np.linspace(minval, maxval, n)))\n",
+    "\n",
+    "    return new_cmap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot square grid with errors\n",
+    "fig, ax = plt.subplots(figsize=(6,6))\n",
+    "myColorMap = truncate_colormap(cmap='Blues', minval = 0.0, maxval = 0.65)\n",
+    "im = ax.imshow(100*ratesB2BRelDiff, cmap=myColorMap)\n",
+    "im.set_clim(0.0,15)\n",
+    "# Set labels\n",
+    "ax.set_title(r\"$\\mathrm{Transition \\ rates \\ percentual \\ error}$\", fontsize = fsize + 2)\n",
+    "ax.set_ylabel(r\"$\\mathrm{Initial \\ bound \\ state}$\", fontsize = fsize + 2)\n",
+    "ax.set_xlabel(r'$\\mathrm{Final \\ bound \\ state}$', fontsize = fsize + 2)\n",
+    "# We want to show all ticks...\n",
+    "ax.set_xticks(np.arange(len(boundStates)))\n",
+    "ax.set_yticks(np.arange(len(boundStates)))\n",
+    "# ... and label them with the respective list entries\n",
+    "ax.set_xticklabels(boundStates)\n",
+    "ax.set_yticklabels(boundStates)\n",
+    "# Loop over data dimensions and create text annotations.\n",
+    "for i in range(len(boundStates)):\n",
+    "    for j in range(len(boundStates)):\n",
+    "        if i != j:\n",
+    "            #text = ax.text(j, i, '{:.2f}'.format(MFPTdiffRel[i, j]), ha=\"center\", \n",
+    "            #               va=\"center\", color=\"w\", fontsize =fsize)\n",
+    "            text = ax.text(j, i, r'$\\pm${:}'.format(round(ratesDiffRelStd[i, j],2)), ha=\"center\", \n",
+    "                           va=\"center\", color=\"k\", fontsize =fsize-2)\n",
+    "# Set colorbar\n",
+    "cbar = fig.colorbar(im, ax=ax, shrink = 0.8, norm = mpl.colors.Normalize(vmin=0.,vmax=0.15))\n",
+    "cbar.set_ticks([0,5,10, 15])\n",
+    "cbar.set_ticklabels([0,5,10, 15])\n",
+    "# Show plot\n",
+    "fig.tight_layout()\n",
+    "#plt.show()\n",
+    "#plt.savefig('patchyProtein_rates_relError.pdf', bbox_inches='tight')"
    ]
   }
  ],
