--- a/examples/generateMSM.ipynb
+++ b/examples/generateMSM.ipynb
@@ -24,7 +24,7 @@
    "source": [
     "# Load parameters from parameters file\n",
     "#parentDirectory = '../data/dimer/60strength/'\n",
-    "#parentDirectory = '../data/pentamer/dimer/'\n",
+    "#parentDirectory = '../data/pentamer/patchyDimer/'\n",
     "parentDirectory = '../data/testPatchyProtein/benchmark_t6E6_s25_new_equaldiff/'\n",
     "\n",
     "parameterDictionary = analysisTools.readParameters(parentDirectory + \"parameters\")\n",
@@ -109,7 +109,7 @@
    "source": [
     "# Pickle MSM transition matrix and active set as a dictionary   \n",
     "MSM = {'transition_matrix' : mainmsm.transition_matrix, 'active_set': mainmsm.active_set}\n",
-    "#pickle_out = open(\"../data/pickled_data/MSM_dimer_t\" + \"{:.2E}\".format(totalTimeSteps ) + \n",
+    "#pickle_out = open(\"../data/pickled_data/MSM_patchyDimer_t\" + \"{:.2E}\".format(totalTimeSteps ) + \n",
     "#\"_s\" + \"{:d}\".format(stride) + \"_lagt\" + \"{:d}\".format(lagtime) + \".pickle\",\"wb\")\n",
     "\n",
     "#pickle_out = open(\"../data/pickled_data/MSM_pentamer_t\" + \"{:.2E}\".format(totalTimeSteps ) + \n",
