Updated notebooks and scripts

--- a/examples/benchmark/plotTrimerFPTs.ipynb
+++ b/examples/benchmark/plotTrimerFPTs.ipynb
@@ -25,7 +25,7 @@
     "boxsize = 2.5 #10 #8 #6 #5 \n",
     "D = 1.0\n",
     "Drot = 1.0\n",
-    "lagtime = 0.0 #150\n",
+    "lagtime = 100\n",
     "rootDirectory = '../../data/trimer/first_passage_times/'"
    ]
   },
@@ -59,7 +59,7 @@
    "outputs": [],
    "source": [
     "# Load benchmark FPT data computed by script\n",
-    "numTrajs = 5000\n",
+    "numTrajs = 6000\n",
     "filename1 = rootDirectory + 'trimerFPTs_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
     "fpts = []\n",
     "with open(filename1) as file:\n",
@@ -79,9 +79,9 @@
    "outputs": [],
    "source": [
     "# Load FPT data obtained with MSMRD integrator\n",
-    "numTrajs = 5000\n",
-    "#filename = rootDirectory + 'MSMRDtrimerFPTs_trajs' + str(numTrajs) + '_lagt' + str(lagtime) +  '_boxsize' + str(boxsize) + '.xyz'\n",
-    "filename = rootDirectory + 'trimerFPTs_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
+    "numTrajs = 6000\n",
+    "filename = rootDirectory + 'MSMRDtrimerFPTs_trajs' + str(numTrajs) + '_lagt' + str(lagtime) +  '_boxsize' + str(boxsize) + '.xyz'\n",
+    "#filename = rootDirectory + 'trimerFPTs_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
     "MSMRDfpts = []\n",
     "with open(filename) as file:\n",
     "    for line in file:\n",
@@ -725,7 +725,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
