--- a/examples/generateMSM.ipynb
+++ b/examples/generateMSM.ipynb
@@ -25,11 +25,12 @@
     "# Load parameters from parameters file\n",
     "#parentDirectory = '../data/dimer/60strength/'\n",
     "#parentDirectory = '../data/pentamer/patchyDimer/'\n",
-    "parentDirectory = '../data/testPatchyProtein/benchmark_t6E6_s25_new_equaldiff/'\n",
+    "#parentDirectory = '../data/testPatchyProtein/benchmark_t6E6_s25_new_equaldiff/'\n",
+    "parentDirectory = '../data/trimer/benchmark/'\n",
     "\n",
     "parameterDictionary = analysisTools.readParameters(parentDirectory + \"parameters\")\n",
     "# Parameters for loading files (from original simulation)\n",
-    "nfiles = 400 #parameterDictionary['numFiles']\n",
+    "nfiles = 300 #parameterDictionary['numFiles']\n",
     "dt = parameterDictionary['dt'] \n",
     "stride = parameterDictionary['stride']\n",
     "totalTimeSteps = parameterDictionary['timesteps'] \n",
@@ -45,11 +46,14 @@
     "# Calculated parameters\n",
     "dtEffective = dt*stride # needed to obtain rate dictionary\n",
     "#fnamebase = parentDirectory + 'simDimer_'\n",
-    "fnamebase = parentDirectory + 'simPatchyProtein_'\n",
+    "#fnamebase = parentDirectory + 'simPatchyProtein_'\n",
+    "fnamebase = parentDirectory + 'simDimer4Trimer_'\n",
+    "\n",
     "\n",
     "# Parameters for MSM generation \n",
     "#numBoundStates = 8\n",
-    "numBoundStates = 6\n",
+    "#numBoundStates = 6\n",
+    "numBoundStates = 4\n",
     "lagtime = 75 #75 150\n",
     "reversible = True #False\n",
     "stitching = True"
@@ -63,7 +67,7 @@
    "source": [
     "# Load discrete trajectories\n",
     "dtrajs = []\n",
-    "fnamesuffix = '_discrete2states' #'_discrete_test' #'_discrete_python' # '_discrete'\n",
+    "fnamesuffix = '_discrete' #'_discrete2states' #'_discrete_test' #'_discrete_python' # '_discrete'\n",
     "filetype = 'xyz' # 'h5' or 'xyz'\n",
     "for i in range(nfiles):\n",
     "    dtraj = trajectoryTools.loadDiscreteTrajectory(fnamebase, i, fnamesuffix, filetype)\n",
@@ -247,7 +251,7 @@
     "eig0 = mainmsm.eigenvectors_left()[0]\n",
     "print(np.where(np.abs(eig0)>0.1))\n",
     "plt.plot(eig0)\n",
-    "#plt.xlim([0,10])"
+    "plt.xlim([0,10])"
    ]
   },
   {
@@ -315,7 +319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
