Updated scripts and notebook

--- a/examples/benchmark/plotTrimerFPTs.ipynb
+++ b/examples/benchmark/plotTrimerFPTs.ipynb
@@ -22,10 +22,10 @@
    "source": [
     "# Main parameters\n",
     "numparticles = 3\n",
-    "boxsize = 2.5 #10 #8 #6 #5 \n",
+    "boxsize = 6 #2.5 #10 #8 #6 #5 \n",
     "D = 1.0\n",
     "Drot = 1.0\n",
-    "lagtime = 100\n",
+    "lagtime = 40 # 100\n",
     "rootDirectory = '../../data/trimer/first_passage_times/'"
    ]
   },
@@ -160,7 +160,9 @@
     "ax0.set_yticks([0])\n",
     "#hbins = range(0, 500,15)\n",
     "#hbins = range(0, 400,12)\n",
-    "hbins = range(0, 33,1)\n",
+    "#hbins = range(0, 200,6)\n",
+    "hbins = range(0, 100,3)\n",
+    "#hbins = range(0, 33,1)\n",
     "\n",
     "\n",
     "# Plot A to unbound histogram\n",
@@ -171,357 +173,15 @@
     "ax1.hist(MSMRDfpts, bins = hbins, alpha=a2, edgecolor=c2, lw=2, histtype='step', \n",
     "         weights = weightsMSMRD, label =r'$\\mathrm{MSM/RD}$');\n",
     "ax1.legend(fontsize=fsize, title=r'$\\mathrm{Unbound} \\rightarrow A$', title_fontsize = fsize, fancybox=True)\n",
-    "ax1.text(10, 0.105, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(mfpt, fptstd), fontsize=fsize, color=c1)\n",
-    "ax1.text(12, 0.09, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(MSMRDmfpt, MSMRDfptstd), fontsize=fsize, color=c2alt)\n",
+    "ax1.text(40, 0.075, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(mfpt, fptstd), fontsize=fsize, color=c1)\n",
+    "ax1.text(50, 0.065, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(MSMRDmfpt, MSMRDfptstd), fontsize=fsize, color=c2alt)\n",
     "ax1.set_yticks(np.arange(0, 0.18, step=0.1));\n",
-    "ax1.set_xlim([0,33])\n",
+    "#ax1.set_xlim([0,33])\n",
     "#ax1.set_ylim([0,0.18])\n",
+    "ax1.set_xlim([0,100])\n",
     "\n",
-    "#plt.savefig('toBound_FPTs.pdf', bbox_inches='tight')\n",
-    "#plt.savefig('toBound_FPTs.svg', bbox_inches='tight')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Load bound to unbound FPT data (bechmark and MSMRD)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load benchmark FPT data computed by script\n",
-    "numTrajs = 5000\n",
-    "filenameA = rootDirectory + 'patchyDimerFPTs_A2unbound_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
-    "filenameB = rootDirectory + 'patchyDimerFPTs_B2unbound_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
-    "fptsA2unbound = []\n",
-    "fptsB2unbound = []\n",
-    "with open(filenameA) as file:\n",
-    "    for line in file:\n",
-    "        state, time = line.split(\" \")\n",
-    "        time = float(time)\n",
-    "        fptsA2unbound.append(time)\n",
-    "with open(filenameB) as file:\n",
-    "    for line in file:\n",
-    "        state, time = line.split(\" \")\n",
-    "        time = float(time)\n",
-    "        fptsB2unbound.append(time)\n",
-    "        \n",
-    "# Normalizing weights\n",
-    "weightsA2 = np.ones_like(fptsA2unbound)/float(len(fptsA2unbound))\n",
-    "weightsB2 = np.ones_like(fptsB2unbound)/float(len(fptsB2unbound))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load FPT data obtained with MSMRD integrator\n",
-    "numTrajs = 5000\n",
-    "filenameA = rootDirectory + 'MSMRDpatchyDimerFPTs_A2unbound_trajs' + \\\n",
-    "str(numTrajs) + '_lagt' + str(lagtime) +  '_boxsize' + str(boxsize) + '.xyz'\n",
-    "filenameB = rootDirectory + 'MSMRDpatchyDimerFPTs_B2unbound_trajs' + \\\n",
-    "str(numTrajs) + '_lagt' + str(lagtime) +  '_boxsize' + str(boxsize) + '.xyz'\n",
-    "MSMRDfptsA2unbound = []\n",
-    "MSMRDfptsB2unbound = []\n",
-    "with open(filenameA) as file:\n",
-    "    for line in file:\n",
-    "        state, time = line.split(\" \")\n",
-    "        time = float(time)\n",
-    "        MSMRDfptsA2unbound.append(time)\n",
-    "with open(filenameB) as file:\n",
-    "    for line in file:\n",
-    "        state, time = line.split(\" \")\n",
-    "        time = float(time)\n",
-    "        MSMRDfptsB2unbound.append(time)\n",
-    "        \n",
-    "# Normalizing weights\n",
-    "weightsAMSMRD2 = np.ones_like(MSMRDfptsA2unbound)/float(len(MSMRDfptsA2unbound))\n",
-    "weightsBMSMRD2 = np.ones_like(MSMRDfptsB2unbound)/float(len(MSMRDfptsB2unbound))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Calculation of FPTs and comparisons plots"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Compuate mean and standard deviation of bootstrapped samples of benchmark\n",
-    "numBootsrapSamples = 2000\n",
-    "mfptA2unbound, fptA2unboundstd = analysisTools.bootstrapping(fptsA2unbound, numBootsrapSamples)\n",
-    "mfptB2unbound, fptB2unboundstd = analysisTools.bootstrapping(fptsB2unbound, numBootsrapSamples)\n",
-    "print(\"Raw MFPTs (A and B): \", np.array(fptsA2unbound).mean(), np.array(fptsB2unbound).mean() )\n",
-    "print(\"Bootstrapping mean and std (A): \", mfptA2unbound, fptA2unboundstd)\n",
-    "print(\"Bootstrapping mean and std (B): \", mfptB2unbound, fptB2unboundstd)\n",
-    "MSMRDmfptA2unbound, MSMRDfptA2unboundstd = analysisTools.bootstrapping(MSMRDfptsA2unbound, numBootsrapSamples)\n",
-    "MSMRDmfptB2unbound, MSMRDfptB2unboundstd = analysisTools.bootstrapping(MSMRDfptsB2unbound, numBootsrapSamples)\n",
-    "print(\"Raw MSMRD MFPTs (A and B): \",np.array(MSMRDfptsA2unbound).mean(), np.array(MSMRDfptsB2unbound).mean())\n",
-    "print(\"MSMRD bootstrapping mean and std (A): \", MSMRDmfptA2unbound, MSMRDfptA2unboundstd)\n",
-    "print(\"MSMRD bootstrapping mean and std (B): \", MSMRDmfptB2unbound, MSMRDfptB2unboundstd)\n",
-    "if calculateRates:\n",
-    "    mkoffA = 1.0/mfptA2unbound\n",
-    "    mkoffB = 1.0/mfptB2unbound\n",
-    "    mkoffAMSMRD = 1.0/MSMRDmfptA2unbound\n",
-    "    mkoffBMSMRD = 1.0/MSMRDmfptB2unbound\n",
-    "    koffAstd = fptA2unboundstd/(mfptA2unbound*mfptA2unbound)\n",
-    "    koffBstd = fptB2unboundstd/(mfptB2unbound*mfptB2unbound)\n",
-    "    koffAstdMSMRD = MSMRDfptA2unboundstd/(MSMRDmfptA2unbound*MSMRDmfptA2unbound)\n",
-    "    koffBstdMSMRD = MSMRDfptB2unboundstd/(MSMRDmfptB2unbound*MSMRDmfptB2unbound)\n",
-    "    # Calculate averages \n",
-    "    meanKoff = (mkoffA + mkoffB)/2.0\n",
-    "    koffstd = (koffAstd + koffBstd)/2.0\n",
-    "    meanKoffMSMRD = (mkoffAMSMRD + mkoffBMSMRD)/2.0\n",
-    "    koffstdMSMRD = (koffAstdMSMRD + koffBstdMSMRD)/2.0\n",
-    "    errorKoffA = np.abs(mkoffA - mkoffAMSMRD)\n",
-    "    relErrorKoffA = errorKoffA/mkoffA\n",
-    "    errorKoffB = np.abs(mkoffB - mkoffBMSMRD)\n",
-    "    relErrorKoffB = errorKoffB/mkoffB\n",
-    "    print(\"Off rates:\")\n",
-    "    print(\"Bootstrapping mean and std (A):\", mkoffA, koffAstd)\n",
-    "    print(\"Bootstrapping mean and std (B):\", mkoffB, koffBstd)\n",
-    "    print(\"Bootstrapping mean and std (Average):\", meanKoff, koffstd)\n",
-    "    print(\"Bootstrapping MSMRD mean and std (A):\", mkoffAMSMRD, koffAstdMSMRD)\n",
-    "    print(\"Bootstrapping MSMRD mean and std (B):\", mkoffBMSMRD, koffBstdMSMRD)\n",
-    "    print(\"Bootstrapping MSMRD mean and std (Average):\", meanKoffMSMRD, koffstdMSMRD)\n",
-    "    print(\"Error and relative error (A):\", errorKoffA, relErrorKoffA)\n",
-    "    print(\"Error and relative error (B):\", errorKoffB, relErrorKoffB)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# PLOT FOR PAPER #\n",
-    "# Configure figure\n",
-    "fig, (ax1, ax2) = plt.subplots(nrows=2, sharex=True, figsize=(6,5))\n",
-    "fig.subplots_adjust(hspace=0)\n",
-    "fsize = 16\n",
-    "plt.rcParams['xtick.labelsize']=fsize\n",
-    "plt.rcParams['ytick.labelsize']=fsize\n",
-    "hbins = np.arange(0, 6, 0.2)\n",
-    "\n",
-    "# Set outer common axes titles\n",
-    "ax0 = fig.add_subplot(111, frameon=False)\n",
-    "ax0.set_xlabel(r'$\\mathrm{time}$', fontsize=fsize + 4)\n",
-    "ax0.set_ylabel(r'$\\mathrm{FPTs \\ distribution}$', labelpad=17, fontsize=fsize + 4)\n",
-    "ax0.set_xticks([0])\n",
-    "ax0.set_yticks([0])\n",
-    "\n",
-    "# Plot A to unbound histogram\n",
-    "ax1.hist(fptsA2unbound, bins = hbins, alpha=a1, color=c1, weights = weightsA2);\n",
-    "ax1.hist(fptsA2unbound, bins = hbins, alpha=a2, edgecolor=c1, lw=2, histtype='step',\n",
-    "         facecolor='None', weights = weightsA2, label = r'$\\mathrm{Benchmark}$');\n",
-    "ax1.hist(MSMRDfptsA2unbound, bins = hbins, alpha=a1, color=c2, weights = weightsAMSMRD2);\n",
-    "ax1.hist(MSMRDfptsA2unbound, bins = hbins, alpha=a2, edgecolor=c2, lw=2, histtype='step',\n",
-    "         facecolor='None', weights = weightsAMSMRD2, label =r'$\\mathrm{MSM/RD}$');\n",
-    "ax1.legend(fontsize=fsize, title=r'$A \\rightarrow \\mathrm{Unbound}$', title_fontsize = fsize, fancybox=True)\n",
-    "ax1.text(1.4, 0.12, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(mfptA2unbound, fptA2unboundstd), fontsize=fsize, color=c1)\n",
-    "ax1.text(1.45, 0.097, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(MSMRDmfptA2unbound, MSMRDfptA2unboundstd), \n",
-    "         fontsize=fsize, color=c2alt)\n",
-    "ax1.set_xlim([0,6])\n",
-    "ax1.set_ylim([0,0.15])\n",
-    "ax1.set_yticks(np.arange(0, 0.2, step=0.1));\n",
-    "\n",
-    "\n",
-    "# Plot B to unbound histogram\n",
-    "ax2.hist(fptsB2unbound, bins = hbins, alpha=a1, color=c1, weights = weightsB2);\n",
-    "ax2.hist(fptsB2unbound, bins = hbins, alpha=a2, edgecolor=c1, lw=2, histtype='step',\n",
-    "         facecolor='None', weights = weightsB2, label =r'$\\mathrm{Benchmark}$');\n",
-    "ax2.hist(MSMRDfptsB2unbound, bins = hbins, alpha=a1, color=c2, weights = weightsBMSMRD2);\n",
-    "ax2.hist(MSMRDfptsB2unbound, bins = hbins, alpha=a2, edgecolor=c2, lw=2, histtype='step',\n",
-    "         facecolor='None', weights = weightsBMSMRD2, label =r'$\\mathrm{MSM/RD}$');\n",
-    "ax2.legend(fontsize=fsize, title=r'$B \\rightarrow \\mathrm{Unbound}$', title_fontsize = fsize, fancybox=True)\n",
-    "ax2.text(1.4, 0.12, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(mfptB2unbound, fptB2unboundstd), fontsize=fsize, color=c1)\n",
-    "ax2.text(1.45, 0.097, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(MSMRDmfptB2unbound, MSMRDfptB2unboundstd), \n",
-    "         fontsize=fsize, color=c2alt)\n",
-    "ax2.set_xlim([0,6])\n",
-    "ax2.set_ylim([0,0.15])\n",
-    "ax2.set_yticks(np.arange(0, 0.2, step=0.1));\n",
-    "\n",
-    "#plt.savefig('toUnbound_FPTs.pdf', bbox_inches='tight')\n",
-    "#plt.savefig('toUnbound_FPTs.svg', bbox_inches='tight')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Load bound to bound FPT data (bechmark and MSMRD)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load benchmark FPT data computed by script\n",
-    "numTrajs = 5000\n",
-    "filenameA = rootDirectory + 'patchyDimerFPTs_A2B_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
-    "filenameB = rootDirectory + 'patchyDimerFPTs_B2A_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
-    "fptsA2B = []\n",
-    "fptsB2A = []\n",
-    "with open(filenameA) as file:\n",
-    "    for line in file:\n",
-    "        state, time = line.split(\" \")\n",
-    "        time = float(time)\n",
-    "        fptsA2B.append(time)\n",
-    "with open(filenameB) as file:\n",
-    "    for line in file:\n",
-    "        state, time = line.split(\" \")\n",
-    "        time = float(time)\n",
-    "        fptsB2A.append(time)\n",
-    "        \n",
-    "# Normalizing weights\n",
-    "weightsA2B = np.ones_like(fptsA2B)/float(len(fptsA2B))\n",
-    "weightsB2A = np.ones_like(fptsB2A)/float(len(fptsB2A))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load FPT data obtained with MSMRD integrator\n",
-    "numTrajs = 5000\n",
-    "filenameA = rootDirectory + 'MSMRDpatchyDimerFPTs_A2B_trajs' + \\\n",
-    "str(numTrajs) + '_lagt' + str(lagtime) +  '_boxsize' + str(boxsize) + '.xyz'\n",
-    "filenameB = rootDirectory + 'MSMRDpatchyDimerFPTs_B2A_trajs' + \\\n",
-    "str(numTrajs) + '_lagt' + str(lagtime) +  '_boxsize' + str(boxsize) + '.xyz'\n",
-    "MSMRDfptsA2B = []\n",
-    "MSMRDfptsB2A = []\n",
-    "with open(filenameA) as file:\n",
-    "    for line in file:\n",
-    "        state, time = line.split(\" \")\n",
-    "        time = float(time)\n",
-    "        MSMRDfptsA2B.append(time)\n",
-    "with open(filenameB) as file:\n",
-    "    for line in file:\n",
-    "        state, time = line.split(\" \")\n",
-    "        time = float(time)\n",
-    "        MSMRDfptsB2A.append(time)\n",
-    "        \n",
-    "# Normalizing weights\n",
-    "weightsA2BMSMRD = np.ones_like(MSMRDfptsA2B)/float(len(MSMRDfptsA2B))\n",
-    "weightsB2AMSMRD = np.ones_like(MSMRDfptsB2A)/float(len(MSMRDfptsB2A))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Calculation of FPTs and comparisons plots"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Compuate mean and standard deviation of bootstrapped samples of benchmark as well as relative errors\n",
-    "numBootsrapSamples = 2000\n",
-    "mfptA2B, fptA2Bstd = analysisTools.bootstrapping(fptsA2B, numBootsrapSamples)\n",
-    "mfptB2A, fptB2Astd = analysisTools.bootstrapping(fptsB2A, numBootsrapSamples)\n",
-    "print(\"Bootstrapping mean and std (A2B): \", mfptA2B, fptA2Bstd)\n",
-    "print(\"Bootstrapping mean and std (B2A): \", mfptB2A, fptB2Astd)\n",
-    "MSMRDmfptA2B, MSMRDfptA2Bstd = analysisTools.bootstrapping(MSMRDfptsA2B, numBootsrapSamples)\n",
-    "MSMRDmfptB2A, MSMRDfptB2Astd = analysisTools.bootstrapping(MSMRDfptsB2A, numBootsrapSamples)\n",
-    "print(\"MSMRD bootstrapping mean and std (A2B): \", MSMRDmfptA2B, MSMRDfptA2Bstd)\n",
-    "print(\"MSMRD bootstrapping mean and std (B2A): \", MSMRDmfptB2A, MSMRDfptB2Astd)\n",
-    "# Calculates A2B and B2A rates\n",
-    "mkA2B = 1.0/mfptA2B\n",
-    "mkB2A = 1.0/mfptB2A\n",
-    "kA2Bstd = fptA2Bstd/(mfptA2B*mfptA2B)\n",
-    "kB2Astd = fptB2Astd/(mfptB2A*mfptB2A)\n",
-    "MSMRDmkA2B = 1.0/MSMRDmfptA2B\n",
-    "MSMRDmkB2A = 1.0/MSMRDmfptB2A\n",
-    "MSMRDkA2Bstd = MSMRDfptA2Bstd/(MSMRDmfptA2B*MSMRDmfptA2B)\n",
-    "MSMRDkB2Astd = MSMRDfptB2Astd/(MSMRDmfptB2A*MSMRDmfptB2A)\n",
-    "errorKA2B = np.abs(mkA2B - MSMRDmkA2B)\n",
-    "relErrorKA2B = errorKA2B/mkA2B\n",
-    "errorKB2A = np.abs(mkB2A - MSMRDmkB2A)\n",
-    "relErrorKB2A = errorKB2A/mkB2A\n",
-    "print(\"On rates:\")\n",
-    "print(\"Bootstrapping mean and std (A2B):\", mkA2B, kA2Bstd)\n",
-    "print(\"Bootstrapping mean and std (B2A):\", mkB2A, kB2Astd)\n",
-    "print(\"Bootstrapping MSMRD mean and std (A2B):\", MSMRDmkA2B, MSMRDkA2Bstd)\n",
-    "print(\"Bootstrapping MSMRD mean and std (B2A):\", MSMRDmkB2A, MSMRDkB2Astd)\n",
-    "print(\"Error and relative error (A2B):\", errorKA2B, relErrorKA2B)\n",
-    "print(\"Error and relative error (B2A):\", errorKB2A, relErrorKB2A)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# PLOT FOR PAPER #\n",
-    "# Configure figure\n",
-    "fig, (ax1, ax2) = plt.subplots(nrows=2, sharex=True, figsize=(6,5))\n",
-    "fig.subplots_adjust(hspace=0)\n",
-    "fsize = 16\n",
-    "plt.rcParams['xtick.labelsize']=fsize\n",
-    "plt.rcParams['ytick.labelsize']=fsize\n",
-    "#hbins = np.arange(0, 500, 15)\n",
-    "hbins = np.arange(0, 300,9)\n",
-    "\n",
-    "# Set outer common axes titles\n",
-    "ax0 = fig.add_subplot(111, frameon=False)\n",
-    "ax0.set_xlabel(r'$\\mathrm{time}$', fontsize=fsize + 4)\n",
-    "ax0.set_ylabel(r'$\\mathrm{FPTs \\ distribution}$', labelpad=17, fontsize=fsize + 4)\n",
-    "ax0.set_xticks([0])\n",
-    "ax0.set_yticks([0])\n",
-    "\n",
-    "# Plot A to B histogram\n",
-    "ax1.hist(fptsA2B, bins = hbins, alpha=a1, color=c1, weights = weightsA2B);\n",
-    "ax1.hist(fptsA2B, bins = hbins, alpha=a2, edgecolor=c1, lw=2, histtype='step',\n",
-    "         facecolor='None', weights = weightsA2B, label = r'$\\mathrm{Benchmark}$');\n",
-    "ax1.hist(MSMRDfptsA2B, bins = hbins, alpha=a1, color=c2, weights = weightsA2BMSMRD);\n",
-    "ax1.hist(MSMRDfptsA2B, bins = hbins, alpha=a2, edgecolor=c2, lw=2, histtype='step',\n",
-    "         facecolor='None', weights = weightsA2BMSMRD, label =r'$\\mathrm{MSM/RD}$');\n",
-    "ax1.legend(fontsize=fsize, title=r'$A \\rightarrow B$', title_fontsize = fsize, fancybox=True)\n",
-    "ax1.text(40, 0.25, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(mfptA2B, fptA2Bstd), fontsize=fsize, color=c1)\n",
-    "ax1.text(45, 0.2, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(MSMRDmfptA2B, MSMRDfptA2Bstd), fontsize=fsize, \n",
-    "         color=c2alt)\n",
-    "ax1.set_xlim([0,300])\n",
-    "ax1.set_ylim([0,0.35])\n",
-    "ax1.set_yticks(np.arange(0, 0.4, step=0.2));\n",
-    "\n",
-    "# Plot B to A histogram\n",
-    "ax2.hist(fptsB2A, bins = hbins, alpha=a1, color=c1, weights = weightsB2A);\n",
-    "ax2.hist(fptsB2A, bins = hbins, alpha=a2, edgecolor=c1, lw=2, histtype='step',\n",
-    "         facecolor='None', weights = weightsB2A, label = r'$\\mathrm{Benchmark}$');\n",
-    "ax2.hist(MSMRDfptsB2A, bins = hbins, alpha=a1, color=c2, weights = weightsB2AMSMRD);\n",
-    "ax2.hist(MSMRDfptsB2A, bins = hbins, alpha=a2, edgecolor=c2, lw=2, histtype='step',\n",
-    "         facecolor='None', weights = weightsB2AMSMRD, label =r'$\\mathrm{MSM/RD}$');\n",
-    "ax2.legend(fontsize=fsize, title=r'$B \\rightarrow A$', title_fontsize = fsize, fancybox=True)\n",
-    "ax2.text(40, 0.25, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(mfptB2A, fptB2Astd), fontsize=fsize, color=c1)\n",
-    "ax2.text(45, 0.2, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(MSMRDmfptB2A, MSMRDfptB2Astd), fontsize=fsize, \n",
-    "         color=c2alt)\n",
-    "ax2.set_xlim([0,300])\n",
-    "ax2.set_ylim([0,0.35])\n",
-    "ax2.set_yticks(np.arange(0, 0.4, step=0.2));\n",
-    "\n",
-    "#plt.savefig('bound2bound_FPTs.pdf', bbox_inches='tight')\n",
-    "#plt.savefig('bound2bound_FPTs.svg', bbox_inches='tight')"
+    "plt.savefig('trimerFPTs.pdf', bbox_inches='tight')\n",
+    "plt.savefig('trimerFPTs.svg', bbox_inches='tight')"
    ]
   },
   {
@@ -725,7 +385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
