Updated pentamer script

--- a/examples/benchmark/plotPentamerFPTs.ipynb
+++ b/examples/benchmark/plotPentamerFPTs.ipynb
@@ -79,7 +79,7 @@
    "outputs": [],
    "source": [
     "# Load FPT data obtained with MSMRD integrator\n",
-    "numTrajs = 6000\n",
+    "numTrajs = 18000\n",
     "filename = rootDirectory + 'MSMRDpentamerFPTs_trajs' + str(numTrajs) + '_lagt' + str(lagtime) +  '_boxsize' + str(boxsize) + '.xyz'\n",
     "#filename = rootDirectory + 'trimerFPTs_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
     "MSMRDfpts = []\n",
@@ -161,7 +161,8 @@
     "#hbins = range(0, 500,15)\n",
     "#hbins = range(0, 400,12)\n",
     "#hbins = range(0, 200,6)\n",
-    "hbins = range(0, 100,3)\n",
+    "hbins = range(0, 300,9)\n",
+    "#hbins = range(0, 100,3)\n",
     "#hbins = range(0, 33,1)\n",
     "\n",
     "\n",
@@ -178,7 +179,7 @@
     "ax1.set_yticks(np.arange(0, 0.18, step=0.1));\n",
     "#ax1.set_xlim([0,33])\n",
     "#ax1.set_ylim([0,0.18])\n",
-    "ax1.set_xlim([0,100])\n",
+    "ax1.set_xlim([0,300])\n",
     "\n",
     "#plt.savefig('pentamerFPTs.pdf', bbox_inches='tight')\n",
     "#plt.savefig('pentamerFPTs.svg', bbox_inches='tight')"
@@ -201,7 +202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
