--- a/examples/models/CTMSM.ipynb
+++ b/examples/models/CTMSM.ipynb
@@ -63,12 +63,34 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Define continuous-time MSM\n",
+    "MSMtype = 1\n",
+    "ratematrix = np.array([[0.0]])\n",
+    "seed = 0 # Seed = -1 used random device as seed\n",
+    "markovModel = ctmsm(MSMtype, ratematrix, seed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "markovModel.propagateMSM(0,20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -82,7 +104,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
